--- a/confs/example.nginx.conf
+++ b/confs/example.nginx.conf
@@ -25,7 +25,7 @@ server {
     }
 
     # --- Admin: password-protected + PHP allowed ---
-    location /admin/ {
+    location ~ ^/admin/ {
         auth_basic "Restricted Area";
         auth_basic_user_file $document_root/admin/.htpasswd;
         try_files $uri $uri/ /admin/index.php?$args;
